@@ -1,10 +1,10 @@
 #!/bin/bash -ue
 
-    JAVA_VERSION="17"
+    JAVA_VERSION="25"
     MAIN_VERSION="1.1.0"
        MAIN_NAME="github-package-deleter"
       MAIN_CLASS="com.tombrus.githubPackageDeleter.GithubPackageDeleter"
-        LIB_JARS=("lib/mvg-json-1.6.3.jar" "/Users/tom/.m2/repository/com/formdev/flatlaf/3.0/flatlaf-3.0.jar")
+        LIB_JARS=("lib/mvg-json-1.6.3.jar" "/Users/tom/.m2/repository/com/formdev/flatlaf/3.7.2/flatlaf-3.7.2.jar")
    EXTRA_MODULES="jdk.crypto.ec,jdk.localedata"
    MAIN_ICON_PNG="$MAIN_NAME.png"
  MAIN_CLASS_FILE="out/production/$MAIN_NAME/${MAIN_CLASS//.//}.class"
@@ -40,7 +40,7 @@ echo "########## creating java runtime image..."
         --strip-native-commands \
         --no-header-files \
         --no-man-pages  \
-        --compress="2"  \
+        --compress="zip-6"  \
         --strip-debug \
         --add-modules               "$EXTRA_MODULES,$detected_modules" \
         --include-locales="en,nl" \
@@ -68,6 +68,7 @@ echo "########## creating application..."
         --main-class                "$MAIN_CLASS" \
         --main-jar                  "$MAIN_JAR" \
         --java-options              "-Xmx2048m" \
+        --java-options              "--enable-native-access=ALL-UNNAMED" \
         --runtime-image             "$TMP_RUNTIME" \
         --icon                      "$MAIN_ICNS" \
         --app-version               "$MAIN_VERSION" \
